[gd_scene load_steps=5 format=2]

[ext_resource path="res://Picture/Scene/Collision1/DoorCollision.png" type="Texture" id=1]
[ext_resource path="res://Script/Scene/Collision/DoorCollision.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 30.0

[sub_resource type="CircleShape2D" id=2]
radius = 31.0

[node name="DoorCollision" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="textureRect1" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="staticBody2D1" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="staticBody2D1"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="area2D1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="area2D1"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
[connection signal="area_exited" from="area2D1" to="." method="_on_area2D1_area_exited"]
